Composer的命名 1、起名字果然是个忧桑的故事。

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "diserver/framework",
+    "name": "szyhf/DIServerFramework",
     "description": "The DIServer Framework.",
-    "keywords": ["framework", "DIServer"],
+    "keywords": ["framework", "DIServer","swoole"],
     "license": "Apache2",
     "homepage": "https://github.com/szyhf/DIServer",
     "support": {
