修复Composer里边的命名错误。

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
     "require": {
     	"php": ">=5.5.9",
 	"ext-swoole": ">=1.7.20",
-	"szyhf/thinkphp":"dev-master"
+	"topthink/thinkphp":"dev-master"
 	}
 }
