--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "diserver/framework",
     "description": "The DIServer Framework.",
-    "keywords": ["framework", "DIServer","swoole"],
+    "keywords": ["framework", "DIServer", "swoole"],
     "license": "Apache2",
     "homepage": "https://github.com/szyhf/DIServer",
     "support": {
@@ -21,11 +21,15 @@
         }
     ],
     "require": {
-    	"php": ">=5.5.9",
-	"ext-swoole": ">=1.7.20",
-	"topthink/thinkphp":"dev-master"
-	},
+        "php": ">=5.5.9",
+        "ext-swoole": ">=1.7.20",
+        "topthink/thinkphp": "dev-master",
+        "monolog/monolog": "~1.11",
+        "vlucas/phpdotenv":">=2.1.0"
+    },
     "autoload": {
-        "psr-4": {"DIServer\\": "src/"}
+        "psr-4": {
+            "DIServer\\": "src/"
+        }
     }
 }
