把大部分Service\Registry\Facade的方案定下来了 1、Log及LogFacade的工具。 2、启动项 3、Dispatcher 4、Bootstraps 5、Interfaces的目录结构 6、Config与Registry的关系 7、Swoole代理的bug修复。

--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,8 @@
     "psr-4": {
       "DIServer\\": "src/"
     }
+  },
+  "suggest":{
+    "ssdb/phpssdb":"A nosql db server can be use as Cache or Session or Log service."
   }
 }
