--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
   "require": {
     "php": ">=5.5.9",
     "ext-swoole": ">=1.7.20",
-    "psr/log": "~1.0",
-    "symfony/finder": "~2.7"
+    "psr/log": "~1.0"
   },
   "autoload": {
     "psr-4": {
